# ptc-alcaldias-backend

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9dc740fee984_initial_schema.py  a1b2c3d4e5f6_compromisos_afectacion_archivo_version.py  ag1nt3c0de01_add_agente_tables.py  b2c3d4e5f6a7_tramites_avisos.py  bf282849403f_add_notificaciones_table.py  br4ndth3m01_fase1_marca_tokens.py  c3d4e5f6a7b8_plania_proyectos.py  ch4th1st001_add_conversaciones.py  d4e1f00d5ec1_unique_refresh_token_hash.py  d4e5f6a7b8c9_coordinacion_config.py  e7b2a9c14d10_arco_archivos_evidencia_geo.py  f1ge0z0na001_fase1_postgis_expediente_zona.py  f2st0rage002_fase2_storage_scheme.py  f3br1dg3003_fase3_puente_proyectos_cuadrillas.py  f3c5d7a9b201_campo_fase2.py  f4carry0v004_fase6_carry_over.py  mc0rg4n1g01_organigrama_real_mc.py  r5org0nod01_fase1_nucleo_organizacional.py
app/: main.py
app/agente/: README.md  actions.py  analytics.py  context.py  orchestrator.py  tools.py
app/agente_civico/: orchestrator.py  system_prompt.py
app/agente_ejecutivo/: __init__.py  orchestrator.py  system_prompt.py
app/core/: audit.py  config.py  database.py  dependencies.py  exceptions.py  permissions.py  scoping.py  security.py  storage.py  (+1 more)
scripts/: ingest_knowledge.py  seed.py  seed.sql  seed_org.py  seed_prod_extras.py  seed_zona_hotspots.py  test_fase1.py  test_fase4.py
tests/: conftest.py  test_actions.py  test_analytics.py  test_endpoints.py  test_orchestrator.py  test_permissions.py  test_rag_store.py  test_tools.py
(+131 files in other folders)
