[project]
name = "ptc-alcaldias-backend"
version = "0.1.0"
description = "Backend FastAPI para la Plataforma Ciudadana (PTC) de alcaldias CDMX"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic-settings>=2.7,<3",
    "passlib[bcrypt]>=1.7,<2",
    "python-jose[cryptography]>=3.3,<4",
    "python-multipart>=0.0.18",
    "slowapi>=0.1.9,<1",
    "email-validator>=2.0,<3",
    "reportlab>=4.0,<5",
    "matplotlib>=3.9,<4",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
